[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/pet/rsz_siberian.png" type="Texture" id=1]
[ext_resource path="res://props/pet/pet_dog.gd" type="Script" id=2]
[ext_resource path="res://assets/other/white_circle_64x64.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/dog_call/dog_call_3.png" type="Texture" id=4]
[ext_resource path="res://assets/sfx/labrador-barking-daniel_simon.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/icons/dog_call/dog_call_2.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/dog_call/dog_call_4.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/dog_call/dog_call_1.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/dog_call/dog_call_0.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("graphic:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("graphic:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -16, 0, -16, -16, 10, -16, 10, 0 )

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 1

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("calling_icon/right:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("calling_icon/left:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ) ]
}

[node name="pet_dog" type="KinematicBody2D"]
collision_layer = 16384
collision_mask = 2147483651
script = ExtResource( 2 )
role = "friendly"

[node name="shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.117647 )
scale = Vector2( 1, 0.328125 )
texture = ExtResource( 3 )

[node name="graphic" type="Node2D" parent="."]

[node name="neck" type="Polygon2D" parent="graphic"]
color = Color( 0.160784, 0.156863, 0.156863, 1 )
polygon = PoolVector2Array( 9, -27, 25, -35, 33, -26, 20, -13 )

[node name="body" type="Polygon2D" parent="graphic"]
color = Color( 0.160784, 0.156863, 0.156863, 1 )
polygon = PoolVector2Array( -24, -27, 24, -27, 24, 0, 18, 0, 18, -6, -18, -6, -18, 0, -24, 0 )

[node name="body2" type="Polygon2D" parent="graphic"]
color = Color( 0.556863, 0.435294, 0.321569, 1 )
polygon = PoolVector2Array( -24, -18, -9, -12, 11, -16, 19, -22, 26, -19, 24, -17, 24, 0, 18, 0, 18, -6, -18, -6, -18, 0, -24, 0 )

[node name="head" type="Polygon2D" parent="graphic"]
color = Color( 0.160784, 0.156863, 0.156863, 1 )
polygon = PoolVector2Array( 21, -42, 28, -42, 28, -35, 43, -32, 40, -25, 21, -25 )

[node name="head2" type="Polygon2D" parent="graphic"]
color = Color( 0.556863, 0.435294, 0.321569, 1 )
polygon = PoolVector2Array( 21, -42, 28, -42, 28, -35, 32, -31, 26, -25, 21, -27 )

[node name="tail" type="Polygon2D" parent="graphic"]
color = Color( 0.160784, 0.156863, 0.156863, 1 )
polygon = PoolVector2Array( -21, -28, -44, -14, -40, -8, -18, -24 )

[node name="tail2" type="Polygon2D" parent="graphic"]
color = Color( 0.556863, 0.435294, 0.321569, 1 )
polygon = PoolVector2Array( -34, -20, -44, -14, -39, -6, -29, -16, -28, -21 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
offset = Vector2( 0, -32 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 100 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="name" type="Label" parent="."]
margin_left = -22.0
margin_top = -80.0
margin_right = 18.0
margin_bottom = -66.0
custom_styles/normal = SubResource( 4 )
text = "Rice"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[node name="calling_icon" type="Node2D" parent="."]
visible = false
material = SubResource( 6 )
z_index = 20

[node name="right" type="Sprite" parent="calling_icon"]
use_parent_material = true
position = Vector2( 32, -54 )
texture = ExtResource( 9 )

[node name="left" type="Sprite" parent="calling_icon"]
use_parent_material = true
position = Vector2( -32, -54 )
texture = ExtResource( 9 )
flip_h = true

[node name="bark" type="Timer" parent="."]
one_shot = true

[node name="bark_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="call" type="AnimationPlayer" parent="."]
anims/call = SubResource( 7 )
[connection signal="timeout" from="bark" to="." method="_on_bark_timeout"]
